--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <hr>
     <nav>
             <p class="izquierda">La Carta<img src="img/carta.png" title="La Carta" alt="Carta Cafetería" width="129" height="122" class="izquierda"></p>
+            <br><br><br><br><br><br><br><br><br>
             <p class="centro">El Café<img src="img/cafe.jpg" title="El Café" alt="El Café" width="129" height="122" class="centro"></p>
-            <p class="derecha">Contacto<img src="img/contacto.png" title="Contacto" alt="Contacto Cafetería" width="129" height="122" class="derecha"></p>
-
+            <p class="derecha">Contacto<img src="img/contacto.png" title="Contacto" alt="Contacto Cafetería" width="129" height="122" class="derecha"></p>   
+            <p class="izquierda">La Carta<a title="La Carta" href="lacarta.html"><img src="img/carta.png" alt="La Carta" width="129" height="122" class="izquierda"></a></p>
     </nav>
-
 </body>
 </html>
