--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Contacto</h1>
-    
+    <p class="personalcocina"><img src="img/personalcocina.jpg" title="personalcocina" alt="personalcocina" width="450" height="250"></p>
     <p><b>Dirección:</b> Carrer d'Alberic, 18, 46008 València, Valencia</p>
     <p><b>Provincia:</b> Valencia</p>
     <p><b>Correo electrónico:</b> cafelashoras2@gmail.com</p>
