--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <h1 class="titulo1">Cafetería Las Horas 2</h1>
     <hr>
     <nav>
-            <p class="izquierda">La Carta<img src="img/carta.png" title="La Carta" alt="Carta Cafetería" width="129" height="122" class="izquierda"></p>
+            <p class="izquierda"><a href="lacarta.html">La Carta<a title="La Carta" href="lacarta.html"><img src="img/carta.jpg" alt="La Carta" width="129" height="122"></a></p>
             <br><br><br><br><br><br><br><br><br>
-            <p class="centro">El Café<img src="img/cafe.jpg" title="El Café" alt="El Café" width="129" height="122" class="centro"></p>
-            <p class="derecha">Contacto<img src="img/contacto.png" title="Contacto" alt="Contacto Cafetería" width="129" height="122" class="derecha"></p>   
-            <p class="izquierda">La Carta<a title="La Carta" href="lacarta.html"><img src="img/carta.png" alt="La Carta" width="129" height="122" class="izquierda"></a></p>
+            <p class="centro"><a href="elcafe.html">El Café<a title="El Café" href="elcafe.html"><img src="img/cafe.jpg" alt="El Café" width="129" height="122"></a></p>
+            <p class="derecha"><a href="contacto.html">Contacto<a title="Contacto" href="contacto.html"><img src="img/contacto.png" alt="Contacto" width="129" height="122"></a></p>
+        
+            
     </nav>
 </body>
 </html>
