--- a/lacarta.html
+++ b/lacarta.html
@@ -17,5 +17,6 @@
     <hr>
     <p>CROISSANT DE MANTEQUILLA 1€</p>
     <hr>
+    <p class="coffee"><img src="img/coffee.jpg" title="coffee" alt="coffee" width="850" height="400"></p>
 </body>
 </html>
